Ajout de boutons radio dans le pdf d'evaluation stagiaire